Fix ERB parsing bug with `case` in new GetText version (>= 3.4.3) + new tests. See https://github.com/ruby-gettext/gettext/pull/91

--- a/spec/support/rails_app/app/views/layouts/application.html.erb
+++ b/spec/support/rails_app/app/views/layouts/application.html.erb
@@ -1,2 +1,9 @@
 <%= _("Let's get ready to rumble!") %>
-<%= p_("contexte", "salut") %>
+<%= p_("Eminem", "I'm Slim Shady, yes, I'm the real Shady") %>
+
+<div>
+  <%= _('Before case') %>
+  <% case 1 %>
+  <% end %>
+  <%= _('After case') %>
+</div>
